Added main paragraphs
Some additional lorem text added after the first paragraph.

--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
     <body>
         <h1>Intro to hosted Github pages</h1>   
         <p>This is some paragraph text</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi magni, deserunt sequi nihil odio. Ea blanditiis reprehenderit ducimus nisi repudiandae distinctio eligendi voluptate enim, deleniti adipisci, aliquam dolore, molestias dolorem?</p>
+        <p>Velit maiores vel maxime recusandae earum qui doloremque perspiciatis amet quaerat, autem quae tenetur adipisci officiis repellat aliquam, cumque rerum, dolorum! Quas magnam expedita est, non, nemo repellat commodi aliquid?</p>
+        <p>Pariatur neque dolorem nemo nam culpa esse quae rem delectus officiis, aliquid adipisci molestiae distinctio exercitationem recusandae maxime ex, ut, sapiente repellat labore. Rem quos, sequi itaque illo, quia eligendi!</p>
+        <p>Quo, eum, laudantium! Ea facere quis ex repudiandae id ducimus minus earum ut sequi aspernatur dolor blanditiis deleniti illum sunt itaque, fuga, officiis eligendi a autem veniam rerum corrupti. Reprehenderit.</p>
     </body>
 </html>
