--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Github pages</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
+        <link href="css/general.css" rel="stylesheet">
     </head>
     <body>
         <h1>Intro to hosted Github pages</h1>   
