List of my favorite things added
List of favorite nothings.

--- a/index.html
+++ b/index.html
@@ -13,5 +13,19 @@
         <p>Velit maiores vel maxime recusandae earum qui doloremque perspiciatis amet quaerat, autem quae tenetur adipisci officiis repellat aliquam, cumque rerum, dolorum! Quas magnam expedita est, non, nemo repellat commodi aliquid?</p>
         <p>Pariatur neque dolorem nemo nam culpa esse quae rem delectus officiis, aliquid adipisci molestiae distinctio exercitationem recusandae maxime ex, ut, sapiente repellat labore. Rem quos, sequi itaque illo, quia eligendi!</p>
         <p>Quo, eum, laudantium! Ea facere quis ex repudiandae id ducimus minus earum ut sequi aspernatur dolor blanditiis deleniti illum sunt itaque, fuga, officiis eligendi a autem veniam rerum corrupti. Reprehenderit.</p>
+
+        <h2 class="subhead">My favorite things</h2>
+        <ul class="list">
+            <li>Lorem ipsum.</li>
+            <li>Nihil, quo.</li>
+            <li>Eius, aliquid?</li>
+            <li>Quia, officia.</li>
+            <li>Quis, nihil.</li>
+            <li>Fugit, veritatis.</li>
+            <li>Velit, ea.</li>
+            <li>Illo, aliquid?</li>
+            <li>Officiis, inventore!</li>
+            <li>Voluptas, quisquam!</li>
+        </ul>
     </body>
 </html>
