--- a/index.html
+++ b/index.html
@@ -29,5 +29,6 @@
         </ul>
         
         <h2>Another subheading</h2>
+        <p class="blah">And another paragraph of text.</p>
     </body>
 </html>
