--- a/index.html
+++ b/index.html
@@ -30,5 +30,9 @@
         
         <h2>Another subheading</h2>
         <p class="blah">And another paragraph of text.</p>
+
+        <footer>
+            <p>This is to test the git in vs code.</p>
+        </footer>
     </body>
 </html>
